--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,13 +25,12 @@ jobs:
     - name: Get dependencies
       run: |
         go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
 
     - name: Build
       run: go build -v .
 
     - name: Test
       run: go test -v .
+      env: 
+        SETHEALTH_KEY: ${{ secrets.SETHEALTH_KEY }}
+        SETHEALTH_SECRET: ${{ secrets.SETHEALTH_SECRET }}
